# cpp_restserver

./: CMakeLists.txt  Dockerfile  Dockerfile-builder  IdentifyOS.cmake  README.md  UseODB.cmake  hello.code-workspace  log4cxx.properties  test.conf
inc/: database.hxx  keyvaluedbengine.h  restdbserviceserver.h  settings.h  user-odb.hxx  user-odb.ixx  user.hxx
src/: keyvaluedbengine.cpp  main.cpp  restdbserviceserver.cpp  settings.cpp  user-odb.cxx  user.sql
